--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 						<ul class="nav navbar-nav navbar-right">
 							<li class="active"><a href="#" data-nav-section="home"><span>Inicio</span></a></li>
 							<li><a href="#" data-nav-section="explore"><span>Sobre Nosotros</span></a></li>
-							<li><a href="#" data-nav-section="services"><span>Caracteristicas</span></a></li>
+							<li><a href="#" data-nav-section="services"><span>Características</span></a></li>
 							<li><a href="#" data-nav-section="blog"><span>Funcionamiento</span></a></li>
 							<li><a href="#" data-nav-section="testimony"><span>Testimonios</span></a></li>
 						</ul>
@@ -65,7 +65,7 @@
 						<div class="col-md-8 col-md-offset-2 text-center">
 							<h1 class="animate-box"><span class="big">La Seguridad que  </span> <br><span class="medium">Necesitas,la Tranquilidad </span><br> <span class="big">que Mereces <br><br></span></h1>
 							<div class="call-to-action">
-								<a href="#fh5co-services" class="download animate-box"> Mas Informacion</a>
+								<a href="#fh5co-services" class="download animate-box"> Mas Información</a>
 							</div>
 						</div>
 					</div>
@@ -95,7 +95,7 @@
 							<a href="#">
 								<div class="portfolio-entry" style="background-image: url(images/portfolio-1.jpg);">
 									<div class="desc">
-										<p>Soy Sebastian Valdivia, estudiante de la carrera de ciencias de la Computacion. Soy bastante aficionado por la complejidad de los algoritmos.</p>
+										<p>Soy Sebastian Valdivia, estudiante de la carrera de Ciencias de la Computación. Soy bastante aficionado por la complejidad de los algoritmos.</p>
 									</div>
 								</div>
 								<div class="portfolio-text text-center">
@@ -123,7 +123,7 @@
 							<a href="#">
 								<div class="portfolio-entry" style="background-image: url(images/portfolio-3.jpg);">
 									<div class="desc">
-										<p>Soy Ian Santisteban estudiante de la carrera de ingeniería de software en la UPC. Me considero una persona respetuosa y comprometida. Siempre estoy buscando maneras de aprender y aplicar mis conocimientos de manera creativa.</p>
+										<p>Soy Ian Santisteban estudiante de la carrera de Ingeniería de Software en la UPC. Me considero una persona respetuosa y comprometida. Siempre estoy buscando maneras de aprender y aplicar mis conocimientos de manera creativa.</p>
 									</div>
 								</div>
 								<div class="portfolio-text text-center">
@@ -137,7 +137,7 @@
 							<a href="#">
 								<div class="portfolio-entry" style="background-image: url(images/portfolio-4.jpg);">
 									<div class="desc">
-										<p>Soy Arturo Adrianzén, estudiante de Ingienería de Software en la UPC. Me considero una persona muy optimista y perseverante, me gusta el desarrollo de software, sobre todo el que se realiza en el lenguaje de python.</p>
+										<p>Soy Arturo Adrianzén, estudiante de Ingienería de Software en la UPC. Me considero una persona muy optimista y perseverante, me gusta el desarrollo de software, sobre todo el que se realiza en el lenguaje de Python.</p>
 									</div>
 								</div>
 								<div class="portfolio-text text-center">
@@ -186,7 +186,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12 section-heading text-center">
-						<h2 class="animate-box">Caracteristicas</h2>
+						<h2 class="animate-box">Características</h2>
 					</div>
 					<div class="col-md-4 text-center">
 						<div class="box-services">
@@ -337,7 +337,7 @@
 							<p>Hace poco tuve un incidente en casa cuando alguien intentó ingresar sin autorización. Gracias al increíble sistema de reconocimiento facial de la cámara, la persona fue identificada y se activaron las medidas de seguridad. ¡Qué alivio saber que mi hogar está protegido las 24 horas del día! Te amo CamGuard.</p>
 						</div>
 						<div class="author-img" style="background-image: url(images/user-1.jpg);"></div>
-						<span class="user">Ian Sanchez <br> <small>20 años</small></span>
+						<span class="user">Ian Sánchez <br> <small>20 años</small></span>
 					</div>
 
 				</div>
@@ -371,17 +371,17 @@
 			<div class="row">
 				<div class="col-md-4 animate-box">
 					<h3 class="section-title">CamGuard</h3>
-					<p>Empresa enfocada en la seguridad ciudadana mediante tecnologias avanzadas.</p>
+					<p>Empresa enfocada en la seguridad ciudadana mediante tecnologías avanzadas.</p>
 					<ul class="social-media">
-						<li><a href="#" class="facebook"><i class="icon-facebook"></i></a></li>
-						<li><a href="#" class="twitter"><i class="icon-twitter"></i></a></li>
-						<li><a href="#" class="dribbble"><i class="icon-instagram"></i></a></li>
-						<li><a href="#" class="github"><i class="icon-youtube"></i></a></li>
+						<li><a href="https://www.facebook.com/" target="_blank" class="facebook"><i class="icon-facebook"></i></a></li>
+						<li><a href="https://twitter.com/?lang=es" target="_blank" class="twitter"><i class="icon-twitter"></i></a></li>
+						<li><a href="https://www.instagram.com/" target="_blank" class="dribbble"><i class="icon-instagram"></i></a></li>
+						<li><a href="https://www.youtube.com/" target="_blank" class="github"><i class="icon-youtube"></i></a></li>
 					</ul>
 				</div>
 
 				<div class="col-md-4 animate-box">
-					<h3 class="section-title">Our Address</h3>
+					<h3 class="section-title">Contáctanos</h3>
 					<ul class="contact-info">
 						<li><i class="icon-map"></i>Calle 2, MZ. B, LT.11 Urbanización La Calesa, Santiago de Surco </li>
 						<li><i class="icon-phone"></i>(+51) 982 215 978</li>
@@ -391,7 +391,7 @@
 				</div>
 
 			<div class="col-md-4 animate-box">
-				<h3 class="section-title">Contáctanos</h3>
+				<h3 class="section-title">Suscríbete</h3>
 				<form class="contact-form">
 					<div class="form-group">
 						<label for="name" class="sr-only">Nombre</label>
@@ -431,4 +431,3 @@
 
 	</body>
 </html>
-
